fixed navbar collapse

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,4 +1,4 @@
-$grid-float-breakpoint: 900px;
+$screen-sm: 1080px;
 @import "bootstrap";
 
 body {
